--- a/test.html
+++ b/test.html
@@ -1,4 +1,50 @@
-<!-- This is a comment -->
+<!-- Test JavaScripts -->
+<h1 style="background-color:red;text-align:center">JavaScripts test</h1>
+
+<button type="button" onclick="alert('Welcome!')">Click Here1</button> 
+<hr />
+<br />
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My frist JavaScript</h1>
+
+<p id="demo">
+JavaScript can change HTML's content
+</p>
+
+<script>
+function myFunction()
+{
+x=document.getElementById("demo");  // 找到元素
+x.innerHTML="Hello JavaScript!";    // 改变内容
+}
+</script>
+
+<button type="button" onclick="myFunction()">Click Here2</button>
+
+</body>
+</html>
+<hr />
+<br />
+
+
+
+
+
+
+<br />
+<br />
+<br />
+
+<!-- Test HTML -->
+<h1 style="background-color:red;text-align:center">HTML test</h1>
+<h3>This is a heading</h3>
+<hr />
+<br>
+
 
 <table border="1">
 <tr>
@@ -36,11 +82,7 @@
 <br>
 
 
-<h1 style="background-color:red;text-align:center">This is a heading</h1>
-<h2 style="background-color:red">This is a heading</h2>
-<h3>This is a heading</h3>
-<hr />
-<br>
+
 
 
 <p>This is a paragraph.</p>
